[tool.poetry]
name = "fourchan_leak_rss"
version = "1.0.0"
description = "Too much cool stuff leaks on that godawful website, so let's visit it as little as possible."
authors = ["Kyle Williams <kyle.anthony.williams2@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
rfeed = "^1.1.1"
Flask = "^2.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
